# kmc-lotto

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  stylize.sh
.github/workflows/: test-kmc-lotto.yml
cmake/: kmc_lottoConfig.cmake.in
include/lotto/: event_rate_tree_impl.hpp  event_selector.hpp  random.hpp  rejection.hpp  rejection_free.hpp  sum_tree_impl.hpp
tests/: CMakeLists.txt
tests/unit/lotto/: event_rate_tree.cpp  random.cpp  rate_calculators.hpp  rejection.cpp  rejection_free.cpp  sequences.hpp  statistics.hpp
